notes for the map in how to convert it to better loads for ssr

--- a/FrontEnd/src/assets/i18n/en.json
+++ b/FrontEnd/src/assets/i18n/en.json
@@ -15,6 +15,10 @@
         "FORB/HERB": "Forb/Herb",
         "FORBHERB": "Forb/Herb"
     },
+    "COUNTY_MAP":{
+        "CHOOSE_COUNTY":"Choose a county!",
+        "COUNTY_SELECTED":"County Selected:"
+    },
     "NATIVE_PLANTS_IN": "Native Plants In ",
     "SEARCHBAR_PLACEHOLDER": "e.g. Lupinus agardhianus, Apache plume,...,"
 }
