Fixed height problems with separation of search from app-shell

--- a/FrontEnd/src/assets/i18n/en.json
+++ b/FrontEnd/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+    "TITLE": "What Grows Native Here",
     "SORT_OPTIONS": {
         "COMMONNAME": "Common Name",
         "SCIENTIFICNAME": "Scientific Name",
