sizing optimizations, placeholder text for ux.

--- a/FrontEnd/src/assets/i18n/en.json
+++ b/FrontEnd/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
     "TITLE": "What Grows Native Here",
     "ABOUT": "About",
     "SEARCH": "Search",
+    "COUNTY_PLACEHOLDER": "Search Counties",
     "FILTERS": "Filters",
     "SORT": "Sort",
     "SORT_OPTIONS": {
