all scrolls use custom scroll colors. added some pictures of my garden / etc to the about.

--- a/FrontEnd/src/assets/i18n/en.json
+++ b/FrontEnd/src/assets/i18n/en.json
@@ -30,6 +30,12 @@
     "PLANT_OVERVIEW_HEADER": "{{plantCommonName}} aka {{plantScientificName}}",
     "ABOUT_COMPONENT": {
         "HEADER": "Why \"What Grows Native Here\"",
-        "CONTENT": "What started as a passion project to deliver native plant info quickly evolved into an over-engineered mess built on delivering the fastest query results possible for native plants using the native geolocation api and SSR. Inspired by the design of McMasterCarr, I was hoping to deliver public plant info to people with lower internet speeds. Please enjoy the fruits of my labor."
+        "GARDEN_HEADER": "Garden Photos",
+        "MATUREPOPPY_ALT": "Two year old flowerless California Poppy bushes side by side",
+        "GUERRILAGARDENPARKPOPPY_ALT": "Two small flowerless California Poppies sprout from the bark in a public park",
+        "POPPYWITHBUMPER_ALT": "A small bed of flowerless California Poppies adjacent to a white bumper with red scrapes",
+        "ME": "Who \"Me\"",
+        "ME_CONTENT": "Currently working for SOTA Cloud as a developer, using this project to improve on my stack and skills. I was inspired by my own little native flowerbed I've guerrila garden'd from my landlord. I hope I can inspire you to guerrila garden effectively with my native region mapping so we can drive environmental change :)",
+        "CONTENT": "What started as a passion project to deliver native plant info quickly evolved into an over-engineered mess built on delivering the fastest query results possible for native plants using the native geolocation api and SSR. Inspired by the design of McMaster-Carr, I was hoping to deliver public plant info to people with lower internet speeds. Please enjoy the fruits of my labor."
     }
 }
